# optimization_assignment_1

.claude/: settings.local.json
asg1/: README.md
asg1/src/: LBFGS_Example.py  Testing_AdamW_SA_16.py  Testing_AdamW_SA_256.py  Testing_AdamW_StepBS_16.py  Testing_AdamW_StepBS_256.py  Testing_Different_AdamW_batchSize.py  Testing_Different_AdamW_wd.py  Testing_Different_AdamWs.py  Testing_Different_AdamWs_lr.py  Testing_Different_SGD_batchSize.py  Testing_Different_SGD_lr.py  Testing_Different_SGD_mom.py  Testing_Fast_AdamW.py  Testing_SGD_SA_64.py  Testing_SGD_StepBS.py  Testing_optimal_models_100_epochs.py  case1.py  case2.py  case2_basecase.py  case2_johannes.py  plots.py  pyproject.toml  search_problem.py  straight_path.py
asg1/tex/: main.typ  references.bib  report.aux  report.fdb_latexmk  report.fls  report.tex  report.typ
asg1/tex/temp/: temp.typ
asg2/: main.py  pyproject.toml
